--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     
     <groupId>com.prasannjeet</groupId>
     <artifactId>androidutil</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     
     <name>Android Utility</name>
